adds missing http:// to redirect

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- Title with Nu.Trac Logo -->
     <div class="title">
-        <a href="#"><img src="images/title.png"></a>
+        <a href="http://nutrac.antonio-garcia.com"><img src="images/title.png"></a>
     </div>
     <!-- Put empty block under title to get rid of margin from nav -->
     <div class="divider"></div>
